<resources>
    <string name="app_name">Ankuran</string>
    <string name="txt_name">Name</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_husband_name">Husband’s Name</string>
    <string name="txt_husband_id">Husband’s Id</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_labels">Labels</string>
    <string name="btxt_save">Save</string>
    <string name="btxt_apply">Apply</string>
    <string name="txt_add_payment">ADD PAYMENT</string>
    <string name="txt_add_wage">ADD WAGES</string>
    <string name="txt_date">Date</string>
    <string name="txt_payment">Payment</string>
    <string name="txt_item">Item</string>
    <string name="txt_items">Items</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_amount">Amount</string>
    <string name="btxt_group_wage">Group Wages</string>
    <string name="btxt_new_worker">Add New Worker</string>
    <string name="network_error">Network error!\nPlease make sure this device is
		connected to internet</string>
    <string name="title_add_new_worker">Add New Worker</string>
    <string name="title_worker_list">Worker List</string>
    <string name="btxt_add_payment">Add Payment</string>
    <string name="Rs">\u20B9</string>
    <string name="title_worker_profile">Worker Profile</string>
    <string name="btxt_add_wage">Add Wages</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_end_date">End Date</string>
    <string name="btxt_view">View</string>
    <string name="txt_amount_quantity">Amount/pc</string>
    <string name="add_quantity_prompt">Select Quantity</string>
    <string name="txt_outstanding_amt">Due Amount</string>
    <string name="btxt_new_item">Add Item</string>
    <string name="txt_type">Item Type</string>
    <string name="title_item_list">Item List</string>
    <string name="title_add_new_item">Add New Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btxt_new_settlement">Add Settlement</string>
    <string name="txt_correction">Correction</string>
    <string name="txt_note">Note</string>
    <string name="title_add_settlement">Add Settlement</string>
    <string name="title_report">Payout Report</string>
    <string name="title_activity_inventory_list">InventoryListActivity</string>
    <string name="btxt_delete">Remove</string>
    <string name="btxt_add">Add</string>


    <string name="rtxt_new_production">New Production</string>
    <string name="rtxt_stock_transfer_reversal">Stock Transfer Reversal</string>
    <string name="rtxt_sale">Sale</string>
    <string name="rtxt_stock_transfer">Stock Transfer</string>
    <string name="rtxt_others">Others</string>
    <string name="txt_price">Price</string>
    <string name="txt_intent">Reason</string>
    <string name="btxt_add_product">Add Units</string>
    <string name="btxt_remove_product">Remove Units</string>
    <string name="btxt_confirm">Confirm</string>
    <string name="txt_price_per_unit">Price/Unit</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_no_data_found">No Data Found</string>


    <string-array name="array_item">
        <item>Apron</item>
        <item>Embroidered Apron</item>
        <item>Bedsheet-Plan</item>
        <item>Bedsheet-Floral</item>
        <item>Bedsheet-Embroidered</item>
        <item>Shopping Bag</item>
        <item>Hand Purse</item>
        <item>Pencil box</item>
        <item>Pillow Cover-Plan</item>
        <item>Pillow Cover-Floral</item>
        <item>Pillow Cover-Embroidered</item>
    </string-array>


</resources>
