<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llAddWageContainer"
    android:padding="20dp"
    android:visibility="gone"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#020202"
        android:gravity="end"
        android:text="@string/txt_date"
        />

    <EditText
        android:id="@+id/etDate"
        android:hint="11 JAN 2019"
        android:layout_margin="20dp"
        android:inputType="none"
        android:layout_width="match_parent"
        android:background="@drawable/bg_rounded_edittext"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#020202"
        android:gravity="end"
        android:text="@string/txt_item"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="40dp"></android.support.v7.widget.AppCompatSpinner>

    <!--<EditText-->
        <!--android:id="@+id/etPayment"-->
        <!--android:hint="745675"-->
        <!--android:layout_margin="20dp"-->
        <!--android:inputType="number"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@drawable/bg_rounded_edittext"-->
        <!--android:layout_height="wrap_content" />-->


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#020202"
        android:gravity="end"
        android:text="@string/txt_quantity"
        />



    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:background="@drawable/bg_spinner"
        android:layout_height="40dp">

    </android.support.v7.widget.AppCompatSpinner>


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#020202"
        android:gravity="end"
        android:text="@string/txt_amount"
        />

    <EditText
        android:id="@+id/etAmount"
        android:hint="745675"
        android:layout_margin="20dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:background="@drawable/bg_rounded_edittext"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/btxt_save"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@drawable/primary_button_bg"
        android:layout_width="400dp"
        android:layout_height="wrap_content" />

</LinearLayout>