<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llAddPayoutContainer"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:visibility="visible"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/headerBrown"
        android:layout_marginBottom="5dp"
        android:text="@string/btxt_add_payment"
        />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#0d5561"
            android:lineSpacingExtra="4sp"
            android:text="@string/txt_date"
            />

        <EditText
            android:id="@+id/etPaymentDate"
            android:hint="11 JAN 2019"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:enabled="false"
            android:background="@drawable/bg_rounded_edittext"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#0d5561"
            android:lineSpacingExtra="4sp"
            android:text="@string/txt_payment"
            />

        <EditText
            android:id="@+id/etPayment"
            android:hint="745675"
            android:layout_weight="7"
            android:inputType="number"
            android:layout_width="0dp"
            android:background="@drawable/bg_rounded_edittext"
            android:layout_height="wrap_content" />


    </LinearLayout>



    <Button
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/btnAddPayment"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/btxt_add_payment"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/primary_button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>