<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.ankuran.ui.activity.AddNewWorker">

    <LinearLayout
        android:id="@+id/imageContainer"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_gravity="center"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/profilepic"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_name"
                />

            <EditText
                android:id="@+id/etName"
                android:layout_weight="7"
                android:hint="name"
                android:inputType="text"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_phone"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_weight="7"
                android:hint="88678567565"
                android:inputType="number"
                android:maxLength="10"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_husband_name"
                />

            <EditText
                android:id="@+id/etHusbandName"
                android:layout_weight="7"
                android:hint="name"
                android:inputType="text"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_husband_id"
                />

            <EditText
                android:id="@+id/etHusbandId"
                android:layout_weight="7"
                android:hint="745675"
                android:inputType="number"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <Button
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/btnSave"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/btxt_save"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@drawable/primary_button_bg"
            android:layout_width="400dp"
            android:layout_height="wrap_content" />





    </LinearLayout>


</LinearLayout>