<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ankuran.ui.activity.AddNewItem">
    <LinearLayout
        android:id="@+id/imageContainer"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <FrameLayout
            android:id="@+id/itemImageContainer"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/itemImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profilepic"
                app:civ_border_width="2dp"
                android:layout_gravity="bottom|center_horizontal"
                app:civ_border_color="@android:color/transparent"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cameraIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_photo_camera"
                app:civ_border_width="2dp"
                android:layout_gravity="bottom|right"
                app:civ_border_color="@android:color/transparent"/>


        </FrameLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_name"
                />

            <EditText
                android:id="@+id/etName"
                android:layout_weight="7"
                android:hint="name"
                android:inputType="text"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0d5561"
                android:lineSpacingExtra="4sp"
                android:text="@string/txt_type"
                />

            <EditText
                android:id="@+id/etType"
                android:layout_weight="7"
                android:hint="BedSheet"
                android:inputType="text"
                android:layout_width="0dp"
                android:background="@drawable/bg_rounded_edittext"
                android:layout_height="wrap_content" />


        </LinearLayout>





        <Button
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/btnSave"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/btxt_save"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@drawable/primary_button_bg"
            android:layout_width="400dp"
            android:layout_height="wrap_content" />


        <!--<appcompactnu-->
            <!--android:theme="@style/AppTheme.Picker"-->
            <!--android:id="@+id/yearNumberPicker"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->




    </LinearLayout>

</LinearLayout>
